--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -4,10 +4,12 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
-    "eslint": "^9.17.0",
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
     "@stylistic/eslint-plugin": "^2.12.1",
+    "eslint": "^9.17.0",
     "eslint-plugin-import": "^2.31.0",
-    "typescript-eslint": "^8.19.1"
+    "typescript-eslint": "^8.19.1",
+    "@typescript-eslint/parser": "^8.20.0",
+    "eslint-import-resolver-typescript": "^3.7.0"
   }
 }
