chore: add linting for the eslint-config

--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -4,7 +4,9 @@
 	"main": "index.mjs",
 	"type": "module",
 	"scripts": {
-		"inspect": "npx @eslint/config-inspector@latest --config index.mjs"
+		"inspect": "npx @eslint/config-inspector@latest --config index.mjs",
+		"lint": "eslint .",
+		"lint:fix": "eslint --fix ."
 	},
 	"dependencies": {
 		"@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
