--- a/.github/workflows/lint-eslint-config.yml
+++ b/.github/workflows/lint-eslint-config.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     paths:
       - "eslint-config/**"
+      - ".github/workflows/lint-eslint-config.yml"
 
 jobs:
   lint:
@@ -13,6 +14,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 22
+      - name: Install dependencies
+        run: npm ci
+        working-directory: eslint-config
       - name: Linting
         run: npm run lint
         working-directory: eslint-config
