--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@pretendonetwork/eslint-config",
-	"version": "0.0.6",
+	"version": "0.0.7",
 	"main": "index.mjs",
 	"type": "module",
 	"scripts": {
@@ -11,10 +11,11 @@
 	"dependencies": {
 		"@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
 		"@stylistic/eslint-plugin": "^2.12.1",
-		"eslint": "^9.17.0",
-		"eslint-plugin-import": "^2.31.0",
-		"typescript-eslint": "^8.19.1",
 		"@typescript-eslint/parser": "^8.20.0",
-		"eslint-import-resolver-typescript": "^3.7.0"
+		"eslint": "^9.17.0",
+		"eslint-import-resolver-typescript": "^3.7.0",
+		"eslint-plugin-import": "^2.31.0",
+		"globals": "^15.14.0",
+		"typescript-eslint": "^8.19.1"
 	}
 }
