chore: move typescript-eslint/parser to be a dev dependency

--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@pretendonetwork/eslint-config",
-	"version": "0.0.7",
+	"version": "0.0.8",
 	"main": "index.mjs",
 	"type": "module",
 	"scripts": {
@@ -8,10 +8,12 @@
 		"lint": "eslint .",
 		"lint:fix": "eslint --fix ."
 	},
+	"peerDependencies": {
+		"@typescript-eslint/parser": "^8.20.0"
+	},
 	"dependencies": {
 		"@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
 		"@stylistic/eslint-plugin": "^2.12.1",
-		"@typescript-eslint/parser": "^8.20.0",
 		"eslint": "^9.17.0",
 		"eslint-import-resolver-typescript": "^3.7.0",
 		"eslint-plugin-import": "^2.31.0",
