--- a/.github/workflows/publish-eslint-config.yml
+++ b/.github/workflows/publish-eslint-config.yml
@@ -22,6 +22,8 @@ jobs:
         with:
           node-version: 22
           registry-url: "https://registry.npmjs.org"
+      - name: Update npm
+        run: npm install -g npm@latest
       - name: Publishing
-        run: npm publish --access public
+        run: npm publish
         working-directory: eslint-config
