Add repository to package.json for provenance

--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.3",
 	"main": "index.mjs",
 	"type": "module",
+	"repository": "github:PretendoNetwork/common-configs",
 	"scripts": {
 		"inspect": "npx @eslint/config-inspector@latest --config index.mjs",
 		"lint": "eslint .",
